include/dss_capi.h

    /*
    Number of loops
    */
    DSS_CAPI_DLL int32_t Topology_Get_NumLoops(void);
    /*
    Returns index of the active branch
    */
    DSS_CAPI_DLL int32_t Topology_Get_ActiveBranch(void);
    /*
    Array of all isolated branch names.
    */
    DSS_CAPI_DLL void Topology_Get_AllIsolatedBranches(char*** ResultPtr, int32_t* ResultCount);
    /*
    Same as Topology_Get_AllIsolatedBranches but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Topology_Get_AllIsolatedBranches_GR(void);
    /*
    Array of all looped element names, by pairs.
    */
    DSS_CAPI_DLL void Topology_Get_AllLoopedPairs(char*** ResultPtr, int32_t* ResultCount);
    /*
    Same as Topology_Get_AllLoopedPairs but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Topology_Get_AllLoopedPairs_GR(void);
    /*
    MOve back toward the source, return index of new active branch, or 0 if no more.
    */
    DSS_CAPI_DLL int32_t Topology_Get_BackwardBranch(void);
    /*
    Name of the active branch.
    */
    DSS_CAPI_DLL char* Topology_Get_BranchName(void);
    /*
    Sets the first branch active, returns 0 if none.
    */
    DSS_CAPI_DLL int32_t Topology_Get_First(void);
    /*
    Move forward in the tree, return index of new active branch or 0 if no more
    */
    DSS_CAPI_DLL int32_t Topology_Get_ForwardBranch(void);
    /*
    Move to looped branch, return index or 0 if none.
    */
    DSS_CAPI_DLL int32_t Topology_Get_LoopedBranch(void);
    /*
    Sets the next branch active, returns 0 if no more.
    */
    DSS_CAPI_DLL int32_t Topology_Get_Next(void);
    /*
    Number of isolated branches (PD elements and capacitors).
    */
    DSS_CAPI_DLL int32_t Topology_Get_NumIsolatedBranches(void);
    /*
    Move to directly parallel branch, return index or 0 if none.
    */
    DSS_CAPI_DLL int32_t Topology_Get_ParallelBranch(void);
    DSS_CAPI_DLL void Topology_Set_BranchName(char* Value);
    /*
    Array of all isolated load names.
    */
    DSS_CAPI_DLL void Topology_Get_AllIsolatedLoads(char*** ResultPtr, int32_t* ResultCount);
    /*
    Same as Topology_Get_AllIsolatedLoads but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Topology_Get_AllIsolatedLoads_GR(void);
    /*
    First load at the active branch, return index or 0 if none.
    */
    DSS_CAPI_DLL int32_t Topology_Get_FirstLoad(void);
    /*
    Next load at the active branch, return index or 0 if no more.
    */
    DSS_CAPI_DLL int32_t Topology_Get_NextLoad(void);
    /*
    Number of isolated loads
    */
    DSS_CAPI_DLL int32_t Topology_Get_NumIsolatedLoads(void);
    /*
    Topological depth of the active branch
    */
    DSS_CAPI_DLL int32_t Topology_Get_ActiveLevel(void);
    DSS_CAPI_DLL char* Topology_Get_BusName(void);
    /*
    Set the active branch to one containing this bus, return index or 0 if not found
    */
    DSS_CAPI_DLL void Topology_Set_BusName(char* Value);